--- a/PickSuggestionStyle.css
+++ b/PickSuggestionStyle.css
@@ -5,21 +5,46 @@
 }
 html{
     font-size: 22px;
+/*    background: url(mountians.jpeg) no-repeat center center fixed; 
+    background-size: cover;*/
 }
 body{
     font-family: Helvetica;
     font-size: 22px;
-    background-color: #fcf8ec;
+}
+img.bg{
+    min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    z-index: -1;
 }
 a{
     font-family: Arial;
+    font-size: 16px;
     color: #fcf8ec;
     background: #19456b;
     border-radius: 5px;
-    display: inline-block;
     padding: 10px;
     margin: 10px;
     text-decoration: none;
+}
+button{
+    font-family: Arial;
+    font-size: 30px;
+    color: #fcf8ec;
+    background: #19456b;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 40px;
+    min-width: 200px;
+    text-decoration: none;
+}
+
+#container{
+    text-align: center;
 }
 
 #SiteName {
@@ -28,11 +53,11 @@ a{
 
 }
 
-#HomeButton a{
+#HomeButton button{
     font-size: 20px;
 }
 
-#UserButton a{
+#UserButton button{
     font-size: 20px;
     text-align: right;
 }
@@ -41,16 +66,18 @@ nav{
     flex-grow: 1;
     display: block;
 }
-.SuggestionButton a{
+.container button{
     font-size: 22px;
     font-weight: bold;
     border-radius: 10px;
-    margin-top: 250px;
-    margin-left: 100px;
+    margin-top: 150px;
+    margin-left: 150px;
     text-decoration: none;
-
-    padding: 15px 10px;
+    padding: 18px 10px;
+    min-width: 200px;
+    text-align: center;  
 }
+
 header {
     width: 100%;
     position: fixed;
@@ -66,5 +93,10 @@ header {
     flex-wrap: wrap;
   }
 #title{
-    
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    padding-top: 115px;
+    padding-bottom: 20px;
+    text-align: center;
 }
