--- a/PickSuggestionStyle.css
+++ b/PickSuggestionStyle.css
@@ -93,15 +93,7 @@ nav {
   display: block;
 }
 
-.categories button {
-  font-size: 22px;
-  font-weight: bold;
-  border-radius: 10px;
-  /* margin-top: 150px; */
-  margin-left: 185px;
-  text-decoration: none;
-  padding: 18px 15px;
-  min-width: 200px;
+.categories{
   text-align: center;
 }
 
