--- a/PickSuggestionStyle.css
+++ b/PickSuggestionStyle.css
@@ -23,10 +23,10 @@ img.bg{
 }
 a{
     font-family: Arial;
-    font-size: 16px;
+    font-size: 20px;
     color: #fcf8ec;
     background: #19456b;
-    border-radius: 5px;
+    border-radius: 150px;
     padding: 10px;
     margin: 10px;
     text-decoration: none;
@@ -44,6 +44,7 @@ button{
     outline: 0;
     box-shadow: 0 10px rgb(174, 215, 243);
     border-color: #000000;
+    cursor: pointer;
 }
 
 button:hover {
@@ -63,22 +64,23 @@ button:active {
 #SiteName {
     text-align: center;
     color: #19456b;
-
+    margin: 10px auto;
+    display: block;
 }
 
-#HomeButton button{
-    font-size: 20px;
-}
-
-#UserButton button{
-    font-size: 20px;
-    text-align: right;
-}
-nav{
+#UserButton{
     text-align: right;
     flex-grow: 1;
     display: block;
+    margin: -48px 0px 0px 0px;
 }
+#HomeButton{
+    text-align: left;
+    flex-grow: 1;
+    display: block;
+    margin: -26px 0px 0px 0px;
+}
+
 .container button{
     font-size: 22px;
     font-weight: bold;
@@ -101,12 +103,11 @@ header {
   }
 
 .flex-container {
-    display: flex;
     justify-content: left;
     flex-wrap: wrap;
   }
 #title{
-    font-size: 30px;
+    font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     padding-top: 115px;
