--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,6 @@ a {
   text-decoration: none;
 }
 
-/* button {
-  font-family: Arial;
-  color: #fcf8ec;
-  background: #19456b;
-  padding: 10px;
-  font-size: 30px;
-  text-decoration: none;
-  min-width: 200px;
-  margin: 40px;
-  border-radius: 8px;
-} */
-
 button {
   font-family: Arial;
   font-size: 30px;
@@ -81,41 +69,78 @@ button:active {
 
 #HomeButton button {
   font-size: 20px;
+  z-index: 1;
 }
 
 #UserButton button {
   font-size: 20px;
   text-align: right;
 }
+#navbar {
+  overflow: hidden;
+  background-color: #d0e8f2;
+  padding: 22px 10px;
+  transition: 0.4s;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 99;
+}
+#navbar a {
+  float: left;
+  color: #ddd;
+  text-align: center;
+  padding: 12px;
+  margin: 25px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+#navbar a.active {
+  background-color: #19456b;
+  color: white;
+}
+#navbar-right {
+  float: right;
+  margin-left: auto;
+}
+
 nav {
   text-align: right;
   flex-grow: 1;
-  display: block;
-}
-
-.categories {
-  text-align: center;
-}
-
-header {
+  display: flex;
+  flex-wrap: nowrap;
   width: 100%;
   position: fixed;
   z-index: 1;
   height: 69px;
   background-color: #d0e8f2;
   align-items: center;
+  padding: var(--navbar-padding);
 }
+  
+
+.categories {
+  text-align: center;
+}
+
 
 .flex-container {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
+
 }
 .title {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
-  padding-top: 115px;
+  padding-top: 150px;
   padding-bottom: 20px;
   text-align: center;
 }
