--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,233 @@ header {
   min-width: 200px;
   text-align: center;
 }
+
+.auth button {
+  font-family: Arial;
+  font-size: 20px;
+  color: rgb(174, 215, 243);
+  background: #19456b;
+  border-radius: 150px;
+  padding: 5px;
+  margin: 5px;
+  min-width: 100px;
+  text-decoration: none;
+}
+
+.auth button:hover {
+  background-color: #4286c2;
+}
+
+.auth button:active {
+  background-color: #4286c2;
+  box-shadow: 0 5px rgb(174, 215, 243);
+  transform: translateY(4px);
+}
+
+/* POPUP MODALS */
+.popup-overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+.login-popup {
+  position: absolute;
+  top: -150%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.15);
+  width: 300px;
+  height: 440px;
+  background: #f5f5f5;
+  z-index: 2;
+  opacity: 0;
+  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.2);
+  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
+}
+
+.signup-popup {
+  position: absolute;
+  top: -150%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.15);
+  width: 300px;
+  height: 510px;
+  background: #f5f5f5;
+  z-index: 2;
+  opacity: 0;
+  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.2);
+  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
+}
+
+body.showLoginForm .popup-overlay {
+  display: block;
+}
+body.showLoginForm .login-popup {
+  top: 50%;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+body.showSignupForm .popup-overlay {
+  display: block;
+}
+body.showSignupForm .signup-popup {
+  top: 50%;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+.login-popup .popup-close {
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  width: 25px;
+  height: 25px;
+  /* background: #555; */
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.signup-popup .popup-close {
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  width: 25px;
+  height: 25px;
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.login-popup .form .avatar {
+  margin: 30px 0px 20px;
+  text-align: center;
+}
+
+.signup-popup .form .avatar {
+  margin: 30px 0px 20px;
+  text-align: center;
+}
+
+.login-popup .form .avatar img {
+  width: 120px;
+  border-radius: 50%;
+}
+
+.signup-popup .form .avatar img {
+  width: 120px;
+  border-radius: 50%;
+}
+
+.login-popup .form .header {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: #222;
+  margin: 20px 0px;
+}
+
+.signup-popup .form .header {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: #222;
+  margin: 20px 0px;
+}
+
+.login-popup .form .element {
+  padding: 8px 20px;
+}
+
+.signup-popup .form .element {
+  padding: 8px 20px;
+}
+
+.login-popup .form .element label {
+  display: block;
+  font-size: 14px;
+  color: #222;
+  margin-bottom: 5px;
+}
+
+.signup-popup .form .element label {
+  display: block;
+  font-size: 14px;
+  color: #222;
+  margin-bottom: 5px;
+}
+
+.login-popup .form .element input {
+  width: 100%;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  outline: none;
+  border: 1px solid #aaa;
+  background: #eee;
+  border-radius: 5px;
+}
+
+.signup-popup .form .element input {
+  width: 100%;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  outline: none;
+  border: 1px solid #aaa;
+  background: #eee;
+  border-radius: 5px;
+}
+
+.login-popup .form .element button {
+  margin-top: 5px;
+  width: 100%;
+  padding: 10px 0px;
+  text-transform: uppercase;
+  outline: none;
+  border: none;
+  font-size: 15px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #4889da;
+  color: #f5f5f5;
+}
+
+.signup-popup .form .element button {
+  margin-top: 5px;
+  width: 100%;
+  padding: 10px 0px;
+  text-transform: uppercase;
+  outline: none;
+  border: none;
+  font-size: 15px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #4889da;
+  color: #f5f5f5;
+}
+
+.element button {
+  font-family: Arial;
+  font-size: 30px;
+  color: rgb(174, 215, 243);
+  background: #19456b;
+  border-radius: 150px;
+  padding: 5px;
+  margin: 0px;
+  min-width: 100px;
+  text-decoration: none;
+  outline: 0;
+  box-shadow: none;
+  border-color: #000000;
+}
