--- a/css/style.css
+++ b/css/style.css
@@ -31,31 +31,6 @@ a {
   text-decoration: none;
 }
 
-button {
-  font-family: Arial;
-  font-size: 30px;
-  color: rgb(174, 215, 243);
-  background: #19456b;
-  border-radius: 150px;
-  padding: 10px;
-  margin: 40px;
-  min-width: 200px;
-  text-decoration: none;
-  outline: 0;
-  box-shadow: 0 10px rgb(174, 215, 243);
-  border-color: #000000;
-}
-
-button:hover {
-  background-color: #4286c2;
-}
-
-button:active {
-  background-color: #4286c2;
-  box-shadow: 0 5px rgb(174, 215, 243);
-  transform: translateY(4px);
-}
-
 #SiteName {
   text-align: center;
   color: rgb(174, 215, 243);
@@ -212,7 +187,6 @@ lottie-player{
   content: attr(data-text);
   position: absolute;
   left: -2px;
-  text-shadow: -5px 0 magenta;
   background: black;
   overflow: hidden;
   top: 0;
@@ -308,8 +282,6 @@ lottie-player{
   }
 }
 
-
-
 .container {
   justify-content: center;
   align-items: center;
@@ -368,4 +340,94 @@ h1::before {
     transform: translateY(0px);
     opacity: 1;
   }
+}
+
+
+
+
+#start {
+  position: relative;
+  display: flex;
+  transform: rotate(-25deg) skew(25deg);
+  transform-style: preserve-3d;
+  float: right;
+}
+#start li {
+ position: relative;
+ list-style: none;
+ width: 60px;
+ height: 60px;
+ margin: 0px 20px;
+}
+#start li:before{
+ content: '';
+ position: absolute;
+ bottom: -10px;
+ left: -1.5px;
+ width: 100%;
+ height: 10px;
+ background: #2a2a2a;
+ transform-origin: top;
+ transform: skewX(-41deg);
+}
+#start li:after{
+ content: '';
+ position: absolute;
+ left: -9px;
+ width: 9px;
+ height: 100%;
+ background: #2a2a2a;
+ transform-origin: right;
+ transform: skewY(-49deg);
+}
+#start li span{
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ display: flex !important;
+ background: #2a2a2a;
+ justify-content: center;
+ align-items: center;
+ color: #fff;
+ font-size: 30px !important;
+ transition: 1.5s ease-out;
+}
+#start li:hover span {
+ z-index: 1000;
+ transition: .3s;
+ color: #fff;
+ box-shadow: -1px 1px 1px rgba(0, 0, 0, .5);
+}
+#start li:hover span:nth-child(5){
+ transform: translate(40px, -40px);
+ opacity: 1;
+}
+#start li:hover span:nth-child(4){
+ transform: translate(30px, -30px);
+ opacity: .8;
+}
+#start li:hover span:nth-child(3){
+ transform: translate(20px, -20px);
+ opacity: .6;
+}
+#start li:hover span:nth-child(2){
+ transform: translate(10px, -10px);
+ opacity: .4;
+}#start li:hover span:nth-child(1){
+ transform: translate(0px, 0px);
+ opacity: .2;
+}
+#start li:nth-child(1):hover span{
+ background: #52E19F !important;
+}
+#start li:nth-child(2):hover span{
+ background: #2C3456 !important;
+}
+#start li:nth-child(3):hover span{
+ background: #EA6E96 !important;
+}
+#start li:nth-child(4):hover span{
+ background: #FCEB00 !important;
 }
