--- a/css/PickSuggestionStyle.css
+++ b/css/PickSuggestionStyle.css
@@ -1,6 +1,5 @@
-
 html, body {
-	font-family: 'Comfortaa';
+	font-family: 'Helvetica';
   height: 100%;
   font-size: 22px;
   background-color: black;
@@ -17,11 +16,62 @@ html, body {
 	"how-to other random";
 	grid-gap: 0.5rem;
 }
+#HomeButton button {
+  font-size: 20px;
+  z-index: 1;
+  color: white;
+}
+
+#UserButton button {
+  font-size: 20px;
+  text-align: right;
+}
+#navbar {
+  overflow: hidden;
+  background-color: rgb(25, 69, 107);
+  padding: 5px;
+  transition: 0.4s;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 99;
+}
+#navbar a {
+  float: left;
+  color: #ddd;
+  text-align: center;
+  padding: 12px;
+  margin: 25px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar-right {
+  float: right;
+  margin-left: auto;
+}
 
 nav {
   grid-area: nav;
-  display: inline-flex;
+  text-align: right;
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  height: 69px;
+  background-color: #d0e8f2;
+  align-items: center;
+  padding: var(--navbar-padding);
 } 
+ 
 
 #SiteName {
 	position: absolute;	
@@ -64,13 +114,13 @@ a.visited {
 	 text-decoration: none;
 }
 #mental-health {
-	background-color: #4286c2;;
+	border: 2px solid white;
 	grid-area: mental-health;
 }
 
 #diy {
-	background-color: #4286c2;;
-	grid-area: diy;
+  border: 2px solid white;
+  grid-area: diy;
 	text-align: center;
 	font-size: 100px;
 	animation-name: flipped;
@@ -83,33 +133,24 @@ a.visited {
 	100% {transform: rotateY(180deg); display: none;}
 }
 
-.front-diy {
-	padding: 20%;
-
-}
-
-.back-diy {
-	display:none;
-}
-
 #physical {
-	background-color: #4286c2;;
+	border: 2px solid white;
 	grid-area: physical;
 
 }
 
 #how-to {
-	background-color: #4286c2;
+	border: 2px solid white;
 	grid-area: how-to;
 }
 
 #other {
-	background-color: #4286c2;
+	border: 2px solid white;
 	grid-area: other;
 }
 
 #random {
-	background-color: #4286c2;
+	border: 2px solid white;
 	grid-area: random;
 }
 
