--- a/css/PickSuggestionStyle.css
+++ b/css/PickSuggestionStyle.css
@@ -1,22 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html, body {
 	font-family: 'Helvetica';
   height: 100%;
   font-size: 22px;
-  background-color: black;
-  background-size: cover;
 }
 
-.container {
-	display: grid;
-	height: 100vh;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 0.2fr 1fr 1fr;
-	grid-template-areas: "nav nav nav"
-	"mental-health diy physical"
-	"how-to other random";
-	grid-gap: 0.5rem;
-}
-#HomeButton button {
+/*#HomeButton button {
   font-size: 20px;
   z-index: 1;
   color: white;
@@ -35,7 +28,7 @@ html, body {
   width: 100%;
   top: 0;
   z-index: 99;
-}
+}*/
 #navbar a {
   float: left;
   color: #ddd;
@@ -55,112 +48,118 @@ html, body {
 #navbar-right {
   float: right;
   margin-left: auto;
+  display: inline;  
 }
 
 nav {
-  grid-area: nav;
   text-align: right;
   flex-grow: 1;
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 99;
   height: 69px;
-  background-color: #d0e8f2;
   align-items: center;
-  padding: var(--navbar-padding);
+  background-color: #19456B;
+  padding: 5px;
 } 
- 
-
-#SiteName {
-	position: absolute;	
-	font-size: 75px;
-	padding: 10px;
-	color: #19456b;
-}
-
-#navbar-right {
-	float: right;
-  margin-left: auto;
-  display: inline;
-}
-nav button {
-	background-color: #19456b;
-	color: #ddd;
-  text-align: center;
-  padding: 12px;
-  margin: 25px;
+a {
+  font-family: Arial;
+  font-size: 16px;
+  color: #fcf8ec;
+  background: #19456b;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
   text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-}
-nav button:hover {
-  background-color: #ddd;
-  color: black;
-  cursor: pointer;
-}
-nav button.active {
-  background-color: #19456b;
-  color: white;
 }
 
 a {
-	 text-decoration: none;
+   text-decoration: none;
 }
 
 a.visited {
-	 text-decoration: none;
+   text-decoration: none;
 }
+
+.container {
+  background-color: black;
+	display: grid;
+  position: relative;
+  padding: 100px 50px 0px;
+  height: 100%;
+/*  width: 100%;*/
+  grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	grid-template-areas:
+	"mental-health diy physical"
+	"how-to other random";
+	grid-gap: 0.5rem;
+}
+
 #mental-health {
-	border: 2px solid white;
 	grid-area: mental-health;
 }
 
-#diy {
-  border: 2px solid white;
-  grid-area: diy;
-	text-align: center;
-	font-size: 100px;
-	animation-name: flipped;
-	animation-duration: 2s;
-	animation-fill-mode: forwards;
-	animation-play-state: paused;
+#mental-health .card_front:hover {
+  background-image: url('../media/mental-health.gif');
+  color: black;
+
 }
 
-@keyframes flipped {
-	100% {transform: rotateY(180deg); display: none;}
+#diy {
+  grid-area: diy;
+}
+#diy .card_front:hover {
+  background-image: url('../media/diy.gif');
+  background-size: 125%;
+  background-position: center;
+  color: black;
 }
 
 #physical {
-	border: 2px solid white;
 	grid-area: physical;
 
 }
-
+#physical .card_front:hover {
+  background-image: url('../media/physical.gif');
+  background-position: center;
+  color: black;
+}
 #how-to {
-	border: 2px solid white;
 	grid-area: how-to;
 }
-
+#how-to .card_front:hover {
+  background-image: url('../media/how-to.gif');
+  background-position: center;
+  color: black;
+}
 #other {
-	border: 2px solid white;
 	grid-area: other;
+}
+#other .card_front:hover {
+  background-image: url('../media/other.gif');
+  background-position: center;
+  color: black;
 }
 
 #random {
-	border: 2px solid white;
 	grid-area: random;
+
 }
 
-
+#random .card_front:hover {
+  background-image: url('../media/random.gif');
+  background-position: center;
+  color: black;
+}
 .card
 {
-
-    perspective: 1000px;
+    perspective: 1000px; 
     cursor: pointer;
 }
+
 .card--flipped .card_inner,
 .card--flipped .card_inner,
 .card--flipped .card_inner
@@ -171,39 +170,32 @@ a.visited {
 .card_inner
 {
     position: relative;
-    width: 360px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
 }
 
 .card_inner
 {
     transition: transform .25s ease-in-out;
     transform-origin: 50% 50%;
-
     transform-style: preserve-3d;
 }
+
 
 .card_back
 {
     transform: rotateY(180deg);
 }
-.card_front:hover{
-  background-color: #4286c2;
-}
-.card_front:active{
-    background-color: #4286c2;
-    box-shadow: 0 5px rgb(174, 215, 243);
-    transform: translateY(4px);
-  
-}
+
 .card_front,
 .card_back
 {
     position: absolute;
     display: flex;
-    color: #888;
-    background: #19456b;
-    border-radius: 150px;
+    background-color: transparent;
+    border: 2px solid white;
+    font-size: 50px;
+    color: white;
     width: 100%;
     height: 100%;
     min-width: 250px;
@@ -212,9 +204,6 @@ a.visited {
     align-items: center;
     backface-visibility: hidden;
     text-decoration: none;
-    outline: 0;
-    box-shadow: 0 10px rgb(174, 215, 243);
-    border-color: #000000;
-    padding: 10px;
-    margin: 40px;
+    cursor: pointer;
+ /*   outline: 0;*/
 }
