--- a/css/PickSuggestionStyle.css
+++ b/css/PickSuggestionStyle.css
@@ -104,6 +104,7 @@ a.visited {
 
 #mental-health .card_front:hover {
   background-image: url('../media/mental-health.gif');
+  background-position: center;
   color: black;
 
 }
@@ -113,7 +114,7 @@ a.visited {
 }
 #diy .card_front:hover {
   background-image: url('../media/diy.gif');
-  background-size: 125%;
+  background-size: 150%;
   background-position: center;
   color: black;
 }
