--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a {
 #HomeButton button {
   font-size: 20px;
   z-index: 1;
-  color: white;
+  color: black;
 }
 
 #UserButton button {
@@ -113,6 +113,11 @@ a {
   margin-left: auto;
 }
 
+#photos{
+  padding-left: 40px;
+  padding-top: 40px;
+}
+
 nav {
   text-align: right;
   flex-grow: 1;
@@ -139,10 +144,14 @@ nav {
   color: white;
   position: relative;
   padding-top: 100px;
-  padding-bottom: 370px;
+  padding-bottom: 300px;
   text-align: left;
   background-color: rgb(0, 0, 0);
 }
+.welcomeParagraph{
+  padding-top: 30px;
+}
+
 .title {
   background-color: black;
   color: white;
@@ -163,11 +172,16 @@ nav {
   padding-left: 500px;
   text-align: center;
 }
+.listofrules{
+  padding-top: 20px;
+  color: black;
+}
 .rules{
   position: relative;
   text-align: center;
   float: right;
-  padding-right: 30px;
+  padding-right: 90px;
+  margin-top: 50px;
 }
 
 .options button {
@@ -183,9 +197,7 @@ nav {
   min-width: 200px;
   text-align: center;
 }
-#covid-img{
-  float: right;
-}
+
 ul {
   text-align: left;
   list-style-position: inside;
@@ -378,9 +390,11 @@ h1::before {
 #start {
   position: relative;
   display: flex;
-  transform: rotate(-25deg) skew(25deg);
+  transform: rotate(-10deg) skew(25deg);
   transform-style: preserve-3d;
   float: right;
+  padding-right: 700px;
+  margin-top: -10px;
 }
 #start li {
  position: relative;
