--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a {
 #HomeButton button {
   font-size: 20px;
   z-index: 1;
-  color: black;
+  color: p;
 }
 
 #UserButton button {
@@ -230,7 +230,6 @@ lottie-player {
   content: attr(data-text);
   position: absolute;
   left: -2px;
-  background: black;
   overflow: hidden;
   top: 0;
   animation: noise-1 3s linear infinite alternate-reverse,
@@ -246,84 +245,7 @@ lottie-player {
   top: 0;
   animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
 }
-@keyframes glitch {
-  1% {
-    transform: rotateX(10deg) skewX(90deg);
-  }
-  2% {
-    transform: rotateX(0deg) skewX(0deg);
-  }
-}
 
-@keyframes noise-1 {
-  $steps: 30;
-  @for $i from 1 through $steps {
-    #{percentage($i*(1/$steps))} {
-      $top: random(100);
-      $bottom: random(101 - $top);
-      clip-path: inset(#{$top}px 0 #{$bottom}px 0);
-    }
-  }
-}
-
-@keyframes noise-2 {
-  $steps: 30;
-  @for $i from 0 through $steps {
-    #{percentage($i*(1/$steps))} {
-      $top: random(100);
-      $bottom: random(101 - $top);
-      clip-path: inset(#{$top}px 0 #{$bottom}px 0);
-    }
-  }
-}
-
-.scanlines {
-  overflow: hidden;
-  mix-blend-mode: difference;
-}
-
-.scanlines::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-
-  background: repeating-linear-gradient(
-    to bottom,
-    transparent 0%,
-    rgba(255, 255, 255, 0.05) 0.5%,
-    transparent 1%
-  );
-
-  animation: fudge 7s ease-in-out alternate infinite;
-}
-
-@keyframes fudge {
-  from {
-    transform: translate(0px, 0px);
-  }
-  to {
-    transform: translate(0px, 2%);
-  }
-}
-
-.glow {
-  text-shadow: 0 0 1000px rgb(223, 191, 191);
-  color: transparent;
-  position: absolute;
-  top: 0;
-}
-
-@keyframes glitch-2 {
-  1% {
-    transform: rotateX(10deg) skewX(70deg);
-  }
-  2% {
-    transform: rotateX(0deg) skewX(0deg);
-  }
-}
 
 /* .container {
   justify-content: center;
